--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.13.1
 annotated-types==0.7.0
+-e git+ssh://git@github.com/samuelogboye/auth-service-flask.git@4bef3f588819e77f3ff7dde52e053edd066474b0#egg=authentication_service
 bcrypt==4.1.3
 blinker==1.8.2
 cachelib==0.9.0
@@ -9,6 +10,7 @@ Flask-Bcrypt==1.0.1
 Flask-Caching==2.3.0
 Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
+Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
