feat(cors): allowed cors origin set in env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-SECRET_KEY="your_secret_key"
-JWT_SECRET_KEY="your_jwt_secret_key"
-DATABASE_URL=""
+SECRET_KEY=
+JWT_SECRET_KEY=
+
+# Flask settings
+FLASK_APP=manage.py
+FLASK_ENV=development
+
+# CORS ORIGIN
+ALLOWED_ORIGINS=
