--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,39 @@
 alembic==1.13.1
 annotated-types==0.7.0
--e git+ssh://git@github.com/samuelogboye/auth-service-flask.git@4bef3f588819e77f3ff7dde52e053edd066474b0#egg=authentication_service
 bcrypt==4.1.3
 blinker==1.8.2
 cachelib==0.9.0
 click==8.1.7
+Deprecated==1.2.14
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Caching==2.3.0
 Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.7.0
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
+importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+limits==3.12.0
 Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
+ordered-set==4.1.0
+packaging==24.0
 pydantic==2.7.1
 pydantic_core==2.18.2
+Pygments==2.18.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
+rich==13.7.1
 SQLAlchemy==2.0.30
 typing_extensions==4.12.0
 Werkzeug==3.0.3
+wrapt==1.16.0
