--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.13.1
 annotated-types==0.7.0
+astroid==3.2.2
 bcrypt==4.1.3
 blinker==1.8.2
 cachelib==0.9.0
 click==8.1.7
 Deprecated==1.2.14
+dill==0.3.8
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Caching==2.3.0
@@ -18,22 +20,28 @@ Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 gunicorn==22.0.0
 importlib_resources==6.4.0
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 limits==3.12.0
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mccabe==0.7.0
 mdurl==0.1.2
 ordered-set==4.1.0
 packaging==24.0
+platformdirs==4.2.2
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
 PyJWT==2.8.0
+pylint==3.2.3
 python-dotenv==1.0.1
 rich==13.7.1
 SQLAlchemy==2.0.30
+tomli==2.0.1
+tomlkit==0.12.5
 typing_extensions==4.12.0
 Werkzeug==3.0.3
 wrapt==1.16.0
