--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 alembic==1.13.1
 annotated-types==0.7.0
 astroid==3.2.2
+attrs==23.2.0
 bcrypt==4.1.3
 blinker==1.8.2
 cachelib==0.9.0
 click==8.1.7
 Deprecated==1.2.14
 dill==0.3.8
+flasgger==0.9.7.1
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Caching==2.3.0
@@ -23,12 +25,15 @@ importlib_resources==6.4.0
 isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 limits==3.12.0
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
 mdurl==0.1.2
+mistune==3.0.2
 ordered-set==4.1.0
 packaging==24.0
 platformdirs==4.2.2
@@ -38,7 +43,11 @@ Pygments==2.18.0
 PyJWT==2.8.0
 pylint==3.2.3
 python-dotenv==1.0.1
+PyYAML==6.0.1
+referencing==0.35.1
 rich==13.7.1
+rpds-py==0.18.1
+six==1.16.0
 SQLAlchemy==2.0.30
 tomli==2.0.1
 tomlkit==0.12.5
