--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ attrs==23.2.0
 bcrypt==4.1.3
 blinker==1.8.2
 cachelib==0.9.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
 Deprecated==1.2.14
 dill==0.3.8
@@ -21,6 +23,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 gunicorn==22.0.0
+idna==3.7
 importlib_resources==6.4.0
 isort==5.13.2
 itsdangerous==2.2.0
@@ -45,6 +48,7 @@ pylint==3.2.3
 python-dotenv==1.0.1
 PyYAML==6.0.1
 referencing==0.35.1
+requests==2.32.3
 rich==13.7.1
 rpds-py==0.18.1
 six==1.16.0
@@ -52,5 +56,6 @@ SQLAlchemy==2.0.30
 tomli==2.0.1
 tomlkit==0.12.5
 typing_extensions==4.12.0
+urllib3==2.2.1
 Werkzeug==3.0.3
 wrapt==1.16.0
